--- a/css/blocks/control-panel-frame.less
+++ b/css/blocks/control-panel-frame.less
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 3;
   width: 125px;
-  height: 750px;
+  height: 735px;
   margin: 0 5px 0 0;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -19,7 +19,7 @@
 
   &::-webkit-scrollbar-track {
 
-    background: linear-gradient(to bottom, rgba(245, 221, 7, 0.836) 22%, rgba(250, 192, 0, 0.836) 29%, rgba(245, 170, 7, 0.836) 48%, transparent, transparent, rgba(255, 0, 0, 0.719) 74%);
+    background: linear-gradient(to bottom, rgba(245, 221, 7, 0.836) 25%, rgba(250, 192, 0, 0.836) 29%, rgba(245, 170, 7, 0.836) 52%, transparent, transparent, rgba(255, 0, 0, 0.719) 79%);
   }
 
   &::-webkit-scrollbar-track-piece {
@@ -127,17 +127,18 @@
   color: rgba(0, 0, 0, 0.418);
   font-size: 11px;
   border: 4px solid rgba(253, 51, 51, 0.87);
-  border-radius: 10px 10px 90px 90px;
-  box-shadow: 0 7px 5px -2px, inset 0 0 2px black;
-  background: linear-gradient(to bottom, rgba(175, 174, 174, 0.658), white, white, white, white);
+  //border-radius: 10px 10px 90px 90px;
+  border-radius: 3px;
+  box-shadow: inset 0 0 2px black;
+  background: linear-gradient(to bottom, rgba(175, 174, 174, 0.658), white, white, white, rgba(175, 174, 174, 0.658));
 
-  // &:hover {
-  //   border: 4px solid rgba(54, 212, 14, 0.74);
-  // }
+  &:hover {
+    color:rgb(85, 85, 252);
+  }
 
   &:active {
     font-size: 10.5px;
     border: 5px groove rgba(253, 51, 51, 0.87);
-    box-shadow: inset 0 -3px 3px black;
+    box-shadow: inset 0 0px 3px black;
   }
 }
