--- a/css/blocks/control-panel-left.less
+++ b/css/blocks/control-panel-left.less
@@ -5,24 +5,35 @@
   transition: 0.15s;
 }
 
-.tooltip-wrapper {
+.tooltip-container {
   position: absolute;
-  left: 80px;
+  left: 90px;
   display: grid;
   align-content: flex-start;
   width: 170px;
   font-size: 10px;
+  color: white;
   border: 2px solid black;
-  filter: drop-shadow(0 0 0px red);
+  filter: drop-shadow(none);
+  opacity: 1;
+  background: #000;
 
-  .descriptor-button {
+  div {
+    padding: 5px;
+  }
+
+  .tooltip-descriptor-button {
     line-height: 25px;
-    border: 1px solid black;
+    padding: 3px;
+    margin-right: 5px;
+    border: 1px solid yellow;
+    border-radius: 2px;
   }
 }
 
 .control-panel-left {
   position: relative;
+  z-index: 10;
   width: 228px;
   height: 727px;
   margin: 79px 10px 0 29px;
@@ -101,11 +112,12 @@
       height: 50px;
 
       &-1 {
-        background: url(../img/icons/pencil1.svg) no-repeat 50% 50%;
+        background: url(../img/icons/pencil_1.svg) no-repeat 50% 50% ;
       }
 
       &-2 {
-        background: url(../img/icons/eye-dropper.svg) no-repeat 50% 50%;
+        background: url(../img/icons/pencil_2.svg) no-repeat 50% 50%;
+        background-size: 29%;
       }
 
       &-3 {
@@ -113,7 +125,7 @@
       }
 
       &-4 {
-        background: url(../img/icons/exchange-alt.svg) no-repeat 50% 50%;
+        background: url(../img/icons/paint.svg) no-repeat 50% 50%;
       }
 
       &-5 {
@@ -121,7 +133,7 @@
       }
 
       &-6 {
-        background: url(../img/icons/exchange-alt.svg) no-repeat 50% 50%;
+        background: url(../img/icons/edit_2.svg) no-repeat 50% 50%;
       }
 
       &-7 {
@@ -146,7 +158,7 @@
 
     }
 
-    &__item {
+    &__item:not(:nth-child(2)) {
       background-size: 27%;
     }
   }
