--- a/css/blocks/control-panel-right.less
+++ b/css/blocks/control-panel-right.less
@@ -1,11 +1,13 @@
 .selected {
-  margin: 1px 0;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  //margin: 1px 0;
+  // border-top: 1px solid black;
+  // border-bottom: 1px solid black;
   background: linear-gradient(to bottom, red, white, red);
 }
 
 .control-panel-right {
+  display: grid;
+  align-content: flex-start;
   width: 220px;
   height: calc(100% - 25px);
   padding: 7px;
@@ -29,7 +31,23 @@
     }
 
     &__background {
+      position: relative;
       background: url(../img/canvas-bg/bg-1.png);
+    }
+
+    &__mini-map {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      margin: auto;
+      opacity: 0;
+      box-sizing: border-box;
+      border: 2px solid black;
+      cursor: pointer;
     }
 
     &__monitor {
@@ -50,13 +68,16 @@
       text-align: right;
     }
 
+    &__fps-slider {
+      width: 136px;
+    }
+
   }
 
   .layers-panel {
     min-height: 200px;
     margin-top: 20px;
     font-size: 15px;
-    //border: 6px inset rgb(87, 86, 86);
     border: 6px inset rgb(255, 255, 255);
     border-radius: 5px;
 
@@ -91,9 +112,7 @@
       }
 
       .button-delete-layer {
-
         background: url(../img/icons/clear.svg) 50% 50% no-repeat;
-        //background-size: 16px 16px;
       }
 
       .button:not(:nth-child(6)) {
@@ -111,27 +130,141 @@
       }
     }
 
-    .list-layer {
-      line-height: 20px;
-      text-indent: 5px;
-      text-transform: capitalize;
+    .layers-panel {
+      display: grid;
+      justify-items: flex-end;
     }
 
-    .list-layer:not(.selected) {
+    .list-layer {
+      margin: 1px 0;
+      line-height: 20px;
+      text-indent: 5px;
+    }
+
+    .list-layer {
       color: rgb(7, 7, 7);
-      border-top: 1px solid grey;
-      border-bottom: 1px solid grey;
+      border-top: 1px solid black;
+      border-bottom: 1px solid black;
     }
   }
 
   .canvas-size-wrapper {
-    display: flex;
+    display: grid;
     justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+    border: 4px solid white;
+    border-radius: 4px;
+    padding: 5px;
 
     input {
+      grid-row: 1;
       width: 60px;
+      height: 20px;
       text-align: center;
+      border: 2px solid black;
+      border-radius: 2px;
+    }
+
+    .x {
+      grid-row: 1;
+    }
+
+    .button-submit {
+      grid-column-start: 1;
+      grid-column-end: 4;
+      grid-row: 1/2;
+      width: 100%;
+      height: 24px;
+      margin-top: 10px;
+      font-family: Comics;
+      vertical-align: middle;
+      border: 2px solid black;
+      border-radius: 2px;
+      box-shadow: 0 0 2px rgb(17, 17, 17);
+      background: rgba(8, 80, 236, 0.658);
+
+      &:hover {
+        color: white;
+        background: rgba(8, 80, 236, 0.966);
+        transition: 0.2s;
+      }
+
+      &:active {
+        transform: scale(0.95);
+        color: black;
+        box-shadow: none;
+      }
     }
   }
 
+  .transform-panel {
+    margin-top: 40px;
+    border: 4px solid white;
+    border-radius: 4px;
+    //padding: 5px;
+
+    .title {
+      text-align: center;
+      margin: 5px 0 0 0;
+    }
+
+    .button-wrapper {
+      display: grid;
+      height: 60px;
+      align-content: center;
+      grid-template-columns: 1fr 1px 1fr 1px 1fr;
+      grid-template-rows: 40px;
+    }
+
+    .partition {
+      align-self: center;
+      width: 1px;
+      height: 30px;
+      border-right: 1px solid black;
+    }
+
+    .button-flip-image {
+      background: url('../img/icons/flip.svg') 50% 50% no-repeat;
+    }
+
+    .button-rotate-image {
+      background: url('../img/icons/rotate.svg') 50% 50% no-repeat;
+    }
+
+    .button-clone-image {
+      background: url('../img/icons/clone.svg') 50% 50% no-repeat;
+    }
+
+    .button {
+      height: 40px;
+      background-size: 50%;
+
+      &:hover {
+        filter: drop-shadow(0px 0px 3px yellow);
+        background-size: 55%;
+      }
+
+      &:active {
+        filter: none;
+        background-size: 45%;
+      }
+    }
+
+    button:last-child {
+      border: none;
+    }
+  }
+
+  .parameters {
+    align-self: flex-end;
+    margin-top: 40px;
+    padding: 5px;
+    border: 4px solid white;
+    border-radius: 4px;
+
+    .canvas-resolution {
+      margin-top: 10px;
+    }
+  }
 }
