--- a/css/index.less
+++ b/css/index.less
@@ -28,6 +28,12 @@
 }
 
 body {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   display:grid;
   grid-template-rows: 48px auto;
   min-height: 890px;
@@ -69,6 +75,8 @@ main {
 }
 
 .canvas-base {
+  position: relative;
+  z-index:5;
   display: grid;
   justify-content: center;
   align-content: center;
