--- a/css/blocks/control-panel-frame.less
+++ b/css/blocks/control-panel-frame.less
@@ -11,6 +11,10 @@
     width: 9px;
     height: 3px;
   }
+  &::-webkit-scrollbar {
+    width: 9px;
+    height: 3px;
+  }
 
   &::-webkit-scrollbar-button {
     display: none;
@@ -37,7 +41,6 @@
   
 
   &::-webkit-scrollbar-corner {
-
     //background-color: #999;
   }
 
@@ -67,6 +70,7 @@
 
   &__frame {
     image-rendering: pixelated;
+    image-rendering:-moz-crisp-edges;
   }
 
   &__frame-number {
@@ -129,7 +133,6 @@
   color: rgba(0, 0, 0, 0.418);
   font-size: 11px;
   border: 4px solid rgba(253, 51, 51, 0.87);
-  //border-radius: 10px 10px 90px 90px;
   border-radius: 3px;
   box-shadow: inset 0 0 2px black;
   background: linear-gradient(to bottom, rgba(175, 174, 174, 0.658), white, white, white, rgba(175, 174, 174, 0.658));
