--- a/css/blocks/control-panel-right.less
+++ b/css/blocks/control-panel-right.less
@@ -147,7 +147,7 @@
     display: grid;
     justify-content: space-between;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 5vh;
     border: 4px solid white;
     border-radius: 4px;
     padding: 5px;
@@ -194,7 +194,7 @@
   }
 
   .transform-panel {
-    margin-top: 40px;
+    margin-top: 5vh;
     border: 4px solid white;
     border-radius: 4px;
     //padding: 5px;
@@ -253,7 +253,7 @@
 
   .parameters {
     align-self: flex-end;
-    margin-top: 40px;
+    margin-top: 5vh;
     padding: 5px;
     border: 4px solid white;
     border-radius: 4px;
