--- a/css/index.css
+++ b/css/index.css
@@ -1,642 +1,233 @@
+@import 'blocks/control-panel-left.css';
+@import 'blocks/control-panel-right.css';
+@import 'blocks/control-panel-frame.css';
+@import 'blocks/aside-panel.css';
+
 @font-face {
-  font-family: 'Comics';
-  src: url('../fonts/Comics.ttf') format('truetype');
+	font-family: 'Comics';
+	src: url('../fonts/Comics.ttf') format('truetype');
 }
+
 @font-face {
-  font-family: 'CS Nancy';
+	font-family: 'CS Nancy';
   src: url('../fonts/CS\ Nancy.ttf') format('truetype');
 }
+
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  list-style: none;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	list-style: none;
 }
-.active {
-  color: red;
-  transform: translate(0px, 4px);
-  text-shadow: 0px -4px 2px rgba(35, 37, 35, 0.829);
+
+#i4c-dialogs-container {
+	display: none;
 }
+
 .transition {
-  transition: 0.2s;
+	transition: 0.2s;
 }
-.box {
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  background: #f50404;
-  filter: brightness(0.1);
-  z-index: 20;
+
+.tooltip-container {
+	font-family: Comics;
+	font-size: 10px;
+	color: white;
+	border: 2px solid black;
+	opacity: 1;
+	background: #000;
 }
+
+.tooltip-container div {
+	padding: 5px;
+}
+
+.tooltip-container .tooltip-descriptor-button {
+	display: inline-block;
+	width: 32px;
+	padding: 2px 3px 0 3px;
+	margin-right: 5px;
+	line-height: 13px;
+	text-align: center;
+	vertical-align: middle;
+	border: 1px solid yellow;
+	border-radius: 2px;
+}
+
+.tip-wrapper {
+	position: absolute;
+	z-index: 100;
+}
+
+.top-tip::before {
+	content: '';
+	position: absolute;
+	right: calc(42%);
+	top: 99%;
+	display: block;
+	border: 9px solid transparent;
+	border-top: 9px solid black;
+	transform: rotate(0deg);
+}
+
+.right-tip::before {
+	content: '';
+	position: absolute;
+	left: -18px;
+	top: calc(41%);
+	display: block;
+	border: 9px solid transparent;
+	border-top: 9px solid;
+	transform: rotate(90deg);
+}
+
+.left-tip::before {
+	content: '';
+	position: absolute;
+	right: -18px;
+	top: calc(41%);
+	display: block;
+	border: 9px solid transparent;
+	border-top: 9px solid;
+	transform: rotate(-90deg);
+}
+
 body {
-  min-height: 890px;
-  height: 100vh;
-  font-family: Roboto;
-  background: url(../img/pictures/pixel_art_8_bit_retro_games-1364327.png);
-  background-size: auto 100%;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	display: grid;
+	grid-template-rows: 48px auto;
+	min-height: 890px;
+	height: 100vh;
+	font-family: Roboto;
+	background: url(../img/pictures/pixel_art_8_bit_retro_games-1364327.png);
+	background-size: auto 100%;
 }
-.page-wrapper {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  align-content: flex-start;
-  max-width: 100vw;
-  height: 100%;
-  margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0.897);
-}
+
 header {
-  display: grid;
-  grid-template-columns: 40px 1fr;
-  height: 48px;
-  box-shadow: 0 6px 3px -4px rgba(0, 0, 0, 0.425);
-  background: linear-gradient(to bottom, rgba(33, 189, 85, 0.692) 35%, rgba(245, 221, 7, 0.836) 50%);
+	box-shadow: 0 6px 3px -4px rgba(0, 0, 0, 0.425);
+	background: linear-gradient(to bottom, rgba(33, 189, 85, 0.692) 35%, rgba(245, 221, 7, 0.836) 50%);
 }
-header .menu {
-  margin-left: 10px;
-  background: url(../img/icons/nav-icon.svg);
-}
+
 header h1 {
-  margin-top: 9px;
-  margin-left: 50px;
-  font-family: CS Nancy, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 20px;
-  line-height: 23px;
+	margin-top: 9px;
+	margin-left: 30px;
+	font-family: CS Nancy, "Helvetica Neue", Helvetica, sans-serif;
+	font-size: 20px;
+	line-height: 23px;
 }
+
 main {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 10px;
-  font-family: Comics;
+	display: flex;
+	width: 100vw;
+	height: 100%;
+	padding-top: 10px;
+	font-family: Comics;
+	box-sizing: border-box;
+	background-color: rgba(255, 255, 255, 0.897);
 }
-.aside-panel {
-  position: relative;
-  display: flex;
-  width: 50px;
-  z-index: 1000;
-}
-.aside-panel__main-wrapper {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  display: flex;
-}
-.aside-panel__icon-wrapper {
-  align-self: center;
-}
-.aside-panel__icon-wrapper .icon-background {
-  background: rgba(33, 189, 85, 0.692);
-}
-.aside-panel__icon-wrapper .icon-background:first-child {
-  border-radius: 5px 0 0 0;
-}
-.aside-panel__icon-wrapper .icon-background:hover {
-  transform: scale(0.95);
-  transform-origin: right;
-}
-.aside-panel__icon-wrapper .icon {
-  width: 50px;
-  height: 50px;
-  margin-bottom: 5px;
-}
-.aside-panel__icon-wrapper .icon-save {
-  background: url(../img/icons/save.svg) no-repeat;
-  background-position: center;
-}
-.aside-panel__icon-wrapper .icon-import {
-  background: url(../img/icons/import.svg) no-repeat;
-  background-position: center;
-}
-.aside-panel__operating-wrapper {
-  width: 250px;
-  height: 300px;
-  background: rgba(245, 221, 7, 0.993);
-  transition: width 0.8s;
-  overflow: hidden;
-}
-.aside-panel__operating {
-  width: 230px;
-  height: 100%;
-  margin: 0 auto;
-  font-size: 13px;
-}
-.aside-panel__save-operating {
-  width: 230px;
-  display: grid;
-  align-content: space-around;
-}
-.aside-panel__save-operating .range-input-wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-.aside-panel__save-operating .range-input-wrapper input {
-  width: 135px;
-  margin: 0 5px 0 9px;
-}
-.aside-panel__save-operating .range-input-wrapper span {
-  height: 12px;
-}
-.aside-panel__save-operating .range-input-wrapper span:nth-child(3) {
-  position: absolute;
-  right: 0;
-}
-.aside-panel__save-operating .resolution {
-  display: flex;
-  align-items: center;
-  padding-bottom: 22px;
-  border-bottom: 1px solid black;
-}
-.aside-panel__save-operating .resolution input {
-  width: 46px;
-  text-align: center;
-  border: 2px solid black;
-  border-radius: 2px;
-}
-.aside-panel__save-operating .resolution input:nth-child(2) {
-  margin: 0 10px 0;
-}
-.aside-panel__save-operating .resolution input:nth-child(4) {
-  margin-left: 10px;
-}
-.aside-panel__save-operating .file-format-wrapper {
-  display: grid;
-  align-content: space-around;
-}
-.aside-panel__save-operating .file-format-wrapper .files-name {
-  width: 224px;
-  padding-left: 2px;
-  border: 2px solid black;
-}
-.aside-panel__save-operating .file-format-wrapper .files-name:focus {
-  border-color: rgba(0, 60, 255, 0.623);
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-end;
-  height: 130px;
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper .inner {
-  display: grid;
-  justify-items: center;
-  width: 100px;
-  height: 115px;
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper .image {
-  width: 90px;
-  height: 90px;
-  background: url(../img/pictures/mario.jpg) center / contain no-repeat;
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper .gif {
-  width: 90px;
-  height: 90px;
-  background: url(), url(../img/pictures/mario.gif) center / contain no-repeat;
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper button {
-  position: relative;
-  width: 100%;
-  height: 25px;
-  border: 2px solid rgba(0, 60, 255, 0.623);
-  transition: all 500ms ease;
-  box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5);
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper button:before {
-  position: absolute;
-  content: '';
-  width: 0%;
-  height: 100%;
-  background: rgba(0, 60, 255, 0.623);
-  top: 0;
-  left: 50%;
-  transition: all 0ms ease;
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper button:hover {
-  color: green;
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper button:hover:before {
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 60, 255, 0.623);
-  top: 0;
-  left: 0%;
-  transition: all 300ms ease;
-}
-.aside-panel__save-operating .file-format-wrapper .buttons-wrapper button:active {
-  box-shadow: none;
-  transition: 150ms;
-}
-.aside-panel__import-operating {
-  display: none;
-}
-.aside-panel__import-operating .radio-button-wrapper {
-  display: grid;
-}
+
 .canvas-base {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 67%;
-  max-height: 888px;
-  overflow: hidden;
-  border: 2px solid black;
+	position: relative;
+	z-index: 5;
+	display: grid;
+	justify-content: center;
+	align-content: center;
+	width: 66%;
+	height: calc(84vh);
+	min-height: 800px;
+	margin-right: 5px;
+	overflow: hidden;
+	border-radius: 5px;
+	box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
 }
+
 .canvas-wrapper {
-  position: relative;
-  align-self: center;
-  width: 99%;
-  height: 99%;
-  box-shadow: 0 0 7px rgba(13, 14, 13, 0.384);
+	position: relative;
+	background: url(../img/canvas-bg/bg-1.png);
 }
+
 .canvas {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  image-rendering: pixelated;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	image-rendering: pixelated;
+	image-rendering: -moz-crisp-edges;
 }
+
 .canvas-layer-1 {
-  z-index: 4;
+	z-index: 4;
 }
+
+.canvas-prev-frame {
+	z-index: 5;
+	opacity: 0.2;
+}
+
+.canvas-next-frame {
+	z-index: 6;
+	opacity: 0.2;
+}
+
 .canvas-layer-upper {
-  position: absolute;
-  z-index: 5;
+	position: absolute;
+	z-index: 7;
 }
-.search-box {
-  z-index: 4;
-  align-self: center;
-  display: flex;
-  border-radius: 18px;
-  border: 4px inset #f7f7f3;
-  overflow: hidden;
-}
-.search-box .search-field {
-  width: 250px;
-  height: 30px;
-  margin-left: -4px;
-  padding-left: 10px;
-  border-top-left-radius: 14px;
-  border-bottom-left-radius: 14px;
-  background: linear-gradient(to right, yellow 50%, red 95%);
-  box-shadow: inset 0 0 4px 2px #e7370b;
-}
-.search-box .search-button {
-  margin-left: -80px;
-  width: 80px;
-  height: 30px;
-  font-family: Comics;
-  font-size: 17px;
-  color: rgba(24, 23, 23, 0.836);
-  line-height: 20px;
-  border: 4px outset #464444;
-  border-radius: 14px;
-  background: rgba(247, 244, 244, 0.267);
-}
-.search-box .search-button:hover {
-  transform: scale(1.03);
-}
-.search-box .search-button:active {
-  outline: 0;
-  transform: scale(0.95);
-}
+
 .filters {
-  align-self: center;
-  margin-right: 10px;
+	align-self: center;
+	margin-right: 10px;
 }
+
 .filters .greyscale {
-  z-index: 3;
-  width: 100px;
-  margin-left: -10px;
-  height: 30px;
-  font-family: Comics;
-  font-size: 17px;
-  color: white;
-  border-top-right-radius: 14px;
-  border-bottom-right-radius: 14px;
-  background: linear-gradient(to right, black 25%, white 75%);
+	z-index: 3;
+	width: 100px;
+	margin-left: -10px;
+	height: 30px;
+	font-family: Comics;
+	font-size: 17px;
+	color: white;
+	border-top-right-radius: 14px;
+	border-bottom-right-radius: 14px;
+	background: linear-gradient(to right, black 25%, white 75%);
 }
+
 .filters .greyscale:hover {
-  box-shadow: 0 0 2px 3px;
+	box-shadow: 0 0 2px 3px;
 }
+
 .filters .greyscale:active {
-  outline: none !important;
-  color: black;
+	outline: none !important;
+	color: black;
 }
+
 input[type="range"] {
-  -webkit-appearance: none;
-  width: 140px;
-  height: 15px;
-  background: rgba(121, 201, 75, 0.459);
-  border-radius: 10px;
-  outline: none;
+	-webkit-appearance: none;
+	width: 140px;
+	height: 15px;
+	background: rgba(121, 201, 75, 0.459);
+	border-radius: 10px;
+	outline: none;
 }
+
 input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 20px;
-  height: 15px;
-  background: #ecd503;
-  border-radius: 10px;
+	-webkit-appearance: none;
+	width: 20px;
+	height: 15px;
+	background: #ee0909b7;
+	border: 2px solid #f7f7f8;
+	border-radius: 10px;
 }
-.control-panel-left {
-  position: relative;
-  width: 228px;
-  height: 713px;
-  margin: 79px 10px 0 29px;
-  background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 13%, rgba(250, 192, 0, 0.836) 20%, rgba(245, 170, 7, 0.836) 40%, transparent, transparent, rgba(255, 0, 0, 0.719) 70%);
-}
-.control-panel-left .pixel-size-panel {
-  position: absolute;
-  top: -43px;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-end;
-  width: 214px;
-  padding: 7px;
-}
-.control-panel-left .pixel-size-panel .activePixelSize {
-  box-shadow: 0 0 0 2px black;
-}
-.control-panel-left .pixel-size-panel__wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 3px;
-  background: rgba(255, 230, 0, 0.822);
-  border-radius: 2px;
-}
-.control-panel-left .pixel-size-panel__pixel-1 {
-  background: #000;
-  width: 10px;
-  height: 10px;
-}
-.control-panel-left .pixel-size-panel__pixel-2 {
-  background: #000;
-  width: 12px;
-  height: 12px;
-}
-.control-panel-left .pixel-size-panel__pixel-3 {
-  background: #000;
-  width: 14px;
-  height: 14px;
-}
-.control-panel-left .pixel-size-panel__pixel-4 {
-  background: #000;
-  width: 16px;
-  height: 16px;
-}
-.control-panel-left .pixel-size-panel__pixel-5 {
-  background: #000;
-  width: 18px;
-  height: 18px;
-}
-.control-panel-left .pixel-size-panel__pixel-6 {
-  background: #000;
-  width: 20px;
-  height: 20px;
-}
-.control-panel-left .upper-panel {
-  height: 250px;
-  box-shadow: 0 -3px 3px 0px rgba(45, 51, 49, 0.281);
-}
-.control-panel-left .upper-panel__item {
-  margin-left: 19px;
-  height: 48px;
-  width: 196px;
-  font-family: Comics;
-  font-weight: bold;
-  line-height: 48px;
-}
-.control-panel-left .upper-panel__item span {
-  display: block;
-  margin-left: 50px;
-  font-size: 16px;
-  transition: 0.2s;
-}
-.control-panel-left .upper-panel__item-1 {
-  background: url(../img/icons/fill-drip.svg) no-repeat 0 50%;
-}
-.control-panel-left .upper-panel__item-2 {
-  background: url(../img/icons/eye-dropper.svg) no-repeat 0 50%;
-  border-bottom: 1px solid #75713b;
-}
-.control-panel-left .upper-panel__item-3 {
-  background: url(../img/icons/pencil.svg) no-repeat 0 50%;
-}
-.control-panel-left .upper-panel__item-4 {
-  background: url(../img/icons/exchange-alt.svg) no-repeat 0 50%;
-}
-.control-panel-left .lower-panel {
-  width: 228px;
-  margin-top: 200px;
-  padding-bottom: 15px;
-  box-shadow: 0 3px 3px 0px rgba(45, 51, 49, 0.281);
-}
-.control-panel-left .lower-panel .pcr-app.visible {
-  position: absolute;
-}
-.control-panel-left .lower-panel .pcr-button {
-  position: absolute;
-  height: 0;
-  width: 0;
-}
-.control-panel-left .lower-panel .pcr-button::after {
-  display: none;
-}
-.control-panel-left .lower-panel .pcr-button::before {
-  display: none;
-}
-.control-panel-left .lower-panel__item {
-  display: flex;
-  align-items: center;
-  margin-left: 19px;
-  height: 48px;
-  width: 196px;
-  margin-bottom: 5px;
-  line-height: 48px;
-  border: 2px solid white;
-  border-radius: 5px 20px 20px 5px;
-}
-.control-panel-left .lower-panel__item .wrapper {
-  width: 100%;
-  border-radius: 10px;
-}
-.control-panel-left .lower-panel__item .name {
-  text-shadow: 0 0 2px white;
-}
-.control-panel-left .lower-panel__item-1 {
-  margin-top: 50px;
-  background: linear-gradient(to right, #48ff00 14%, white 27%);
-}
-.control-panel-left .lower-panel__item-2 {
-  margin-bottom: 15px;
-  background: linear-gradient(to right, #6200ff 14%, white 27%);
-}
-.control-panel-left .lower-panel__item-3 {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 20px);
-  grid-template-rows: repeat(auto-fill, 20px);
-  grid-gap: 7px;
-  width: 182px;
-  height: 100px;
-  padding: 7px;
-  background: white;
-}
-.control-panel-left .lower-panel__item-3 .color {
-  justify-self: center;
-  align-self: center;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #000;
-}
-.control-panel-left .lower-panel__item-3 .color:hover {
-  transition: transform 0.2s;
-  transform: scale(1.1);
-  transform-origin: 50%;
-  border: 2px solid white;
-  box-shadow: 0 0 1px 2px black;
-}
-.control-panel-left .lower-panel__item-3 .color:active {
-  transform: scale(0.9);
-  transform-origin: 50%;
-  border: 2px solid white;
-  box-shadow: 0 0 0 2px black;
-}
-.control-panel-left .lower-panel__item span {
-  margin-left: 40px;
-}
-.control-panel-right {
-  width: 200px;
-}
-.control-panel-right .animation-wrapper {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-}
-.control-panel-right .animation-wrapper__monitor-wrapper {
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  width: 200px;
-  height: 200px;
-}
-.control-panel-right .animation-wrapper__control-panel {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-}
-.control-panel-right .animation-wrapper__fps-monitor {
-  height: 15px;
-  margin-right: 5px;
-  text-align: right;
-}
-.control-panel-right .layers-panel {
-  height: 200px;
-}
-.control-panel-right .layers-panel__control .button-add-layer {
-  width: 100px;
-  height: 20px;
-}
-.control-panel-right .canvas-size-wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-.control-panel-right .canvas-size-wrapper input {
-  width: 60px;
-  text-align: center;
-}
-.frame-column {
-  position: relative;
-  z-index: 3;
-  width: 125px;
-  height: 791px;
-  margin: 0 5px 0 0;
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-.frame-column::-webkit-scrollbar {
-  width: 9px;
-  height: 3px;
-}
-.frame-column::-webkit-scrollbar-button {
-  display: none;
-  background-color: #666;
-}
-.frame-column::-webkit-scrollbar-track {
-  background: linear-gradient(to bottom, rgba(255, 230, 0, 0.822) 21%, rgba(250, 192, 0, 0.836) 28%, rgba(245, 170, 7, 0.836) 47%, transparent, transparent, rgba(255, 0, 0, 0.719) 73%);
-}
-.frame-column::-webkit-scrollbar-thumb {
-  background-color: #42e678;
-  box-shadow: inset 0 0 3px black;
-  border-radius: 2px;
-}
-.frame-column__frame-wrapper {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 106px;
-  height: 106px;
-  margin-bottom: 5px;
-  border: 3px solid grey;
-  border-radius: 5px;
-}
-.frame-column__frame-wrapper--active {
-  border: 3px solid black;
-}
-.frame-column__frame-wrapper:hover > button {
-  display: block;
-}
-.frame-column__frame {
-  image-rendering: pixelated;
-}
-.frame-column__frame-number {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  border-right: 3px solid grey;
-  border-bottom: 3px solid grey;
-  border-radius: 0 0 5px 0;
-  background: rgba(255, 230, 0, 0.822);
-}
-.frame-column__button-delete-frame {
-  position: absolute;
-  top: 1px;
-  right: 1px;
-  display: none;
-  width: 22px;
-  height: 22px;
-  background: url(../img/icons/garbage.svg);
-  transition: filter 0.25s;
-}
-.frame-column__button-delete-frame:hover {
-  transform: scale(0.9);
-  filter: drop-shadow(0 0 5px red);
-}
-.frame-column__button-delete-frame:active {
-  transform: scale(0.9);
-  filter: drop-shadow(0 0 5px red);
-}
-.frame-column__button-duplicate-frame {
-  position: absolute;
-  right: 5px;
-  bottom: 0;
-  display: none;
-  width: 22px;
-  height: 22px;
-  background: url(../img/icons/duplicate-1.svg);
-}
-.frame-column__button-duplicate-frame:hover {
-  transition: filter 0.25s;
-}
-.button-add-frame {
-  width: 100%;
-  height: 30px;
-  margin-top: 20px;
+
+input[type="range"]::slider-thumb {
+	-webkit-appearance: none;
+	width: 20px;
+	height: 15px;
+	background: #ee0909b7;
+	border: 2px solid #f7f7f8;
+	border-radius: 10px;
 }
